# empire_os

./: .env.search_api  .env~  .gitignore  AGENT_INDEX.md  BUSINESS_GROWTH_EXECUTION_PLAN.md  DEPLOY_STATE.md  FOUNDER_OUTREACH.md  IP_TRADE_SECRET_CAPTURE.md  KANBAN_2026-07-19.md  KANBAN_2026-07-21.md  MARKETING_GROWTH_AI_PLAN.md  PRODUCT_STATUS.md  SAVEPOINT_2026-07-19.md  SESSION_SNAPSHOT_2026-07-16.md  SESSION_STATUS.md  STACK_DEPLOY_STATUS.md  _audit_funnel.py  _audit_prospects.py  _db_load.py  _fix_webhooks.py  _gen_sitemap.py  _load_goldmine.py  _mcp_test.py  _test_buyer_flow.py  _verify_storm.py  advertising_agent.py  aeo_checker.py  aeo_generator.py  aeo_monitor.py  aeo_refresh.py  agent_copilot.py  agi_agent_service.py  biz_scraper.py  build_buy_page.py  build_product_docs.py  business_dir.py  captcha_farm.py  ceo_agent.py  check_flush.py  check_outbox.py  (+93 more)
config/: agent_heartbeats.json  agent_registry.json  mesh-agent.service  mesh_report.json
deployments/: empire_os_marketplace_20260717_170848_summary.json  empire_os_marketplace_20260717_170848_summary.md
email_templates/: founder_pricing_dark.html  founder_pricing_dark.txt
empire_os/: __init__.py  _check_prospects.py  _verify_route.py  a2a_buyer_marketplace.py  a2a_settle_bridge.py  activate_idle_leads.py  adgen_architect.py  adgen_judge.py  adgen_scanner.py  aeo_surface.py  affiliate.py  agent_core.py  agent_harness.py  agents_daemon.py  agi_client.py  agi_closer.py  agi_loop.py  agi_marketing.py  agi_sales.py  agi_scout.py  asi.py  (+149 more)
empire_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+746 files in other folders)
