[project]
name = "empire-os"
version = "0.1.0"
description = "Empire OS v3 — Agentic engine for lead generation, AEO, and sales"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
]
dspy = [
    "dspy-ai>=2.5,<4",
]

[tool.setuptools.packages.find]
include = ["empire_os*"]
